# kuka_experimental

./: .gitmodules  .pre-commit-config.yaml  README.md  kuka_experimental.repos  kuka_experimental.rolling.repos
.github/workflows/: README.md  ci-coverage-build.yml  ci-ros-lint.yml  foxy-rhel-binary-build.yml  reusable-ros-tooling-source-build.yml  rolling-rhel-binary-build.yml
common_6dof_position_only_system/: CMakeLists.txt  README.md  package.xml
common_6dof_position_only_system/config/: kuka_6dof_controller_position.yaml
common_6dof_position_only_system/control/: kuka_6dof_system_position_only.ros2_control.xacro
example_6dof_position_only_system/: CMakeLists.txt  package.xml
kuka_common_moveit/: CMakeLists.txt  package.xml
kuka_common_moveit/config/: .common_kuka.srdf.xacro.kate-swp  joint_limits.yaml  ompl_planning.yaml  pilz_planning.yaml  ros_controllers.yaml
kuka_common_moveit/launch/: bringup.launch.py  test_bringup.launch.py
kuka_common_moveit/rviz/: moveit.rviz
kuka_common_moveit/srdf/: common_kuka.srdf.xacro
kuka_common_moveit_config/: package.xml
kuka_common_moveit_config/config/: common_kuka.srdf.xacro  kr10_cylinder.srdf  moveit.rviz
kuka_common_moveit_config/launch/: demo.launch.py
kuka_eki/krl/: kuka_eki_hw_interface.src
kuka_eki/kuka_eki_hw_interface/: CMakeLists.txt
kuka_eki_hw_interface/: package.xml
kuka_eki_hw_interface/krl/: EkiIOInterface.xml
kuka_eki_hw_interface/src/: kuka_eki_hw_interface.cpp  kuka_eki_hw_interface_node.cpp
kuka_eki_io_interface/: CMakeLists.txt  README.md  package.xml
kuka_eki_io_interface/launch/: eki_io_interface.launch.py
kuka_eki_io_interface/src/: kuka_eki_io_interface.cpp  kuka_eki_io_interface_node.cpp
kuka_eki_simulator/: CMakeLists.txt  README.md  package.xml  setup.cfg
kuka_eki_simulator/kuka_eki_simulator/: kuka_eki_simulator.py
kuka_experimental/: CMakeLists.txt  package.xml
kuka_kr10_support/: CMakeLists.txt
kuka_kr10_support/launch/: test_gazebo_classic_kuka_kr10r1420.launch.py  test_gazebo_sim_kuka_kr10r1420.launch.py  test_kr10r1100sixx.launch.py  test_kr10r1420.launch.py  test_kr10r900_2.launch.py  test_ros2_control_kr10r1100sixx.launch.py  test_ros2_control_kr10r1420.launch.py  test_ros2_control_kr10r900_2.launch.py  test_ros2_control_sim_classic_kr10r1100sixx.launch.py  test_ros2_control_sim_classic_kr10r900_2.launch.py  test_ros2_control_sim_ignition_kr10r1100sixx.launch.py  test_ros2_control_sim_ignition_kr10r900_2.launch.py
kuka_kr10_support/urdf/: kr10r1100sixx.xacro  kr10r1100sixx_macro.xacro  kr10r1420.xacro  kr10r1420_macro.xacro  kr10r900_2.xacro  kr10r900_2_macro.xacro
kuka_kr120_support/: CMakeLists.txt
kuka_kr120_support/launch/: test_gazebo_classic_kuka_kr120r2500pro.launch.py  test_gazebo_sim_kuka_kr120r2500pro.launch.py  test_kr120r2500pro.launch.py  test_ros2_control_kr120r2500pro.launch.py
kuka_kr120_support/urdf/: kr120r2500pro.xacro  kr120r2500pro_macro.xacro
kuka_kr150_support/: package.xml
kuka_kr150_support/config/: opw_parameters_kr150r3100_2.yaml
kuka_kr150_support/launch/: test_gazebo_classic_kuka_kr150_2.launch.py  test_gazebo_sim_kuka_kr150_2.launch.py  test_kr150_2.launch.py  test_kr150r3100_2.launch.py  test_ros2_control_kr150_2.launch.py  test_ros2_control_kr150r3100_2.launch.py  test_ros2_control_sim_classic_kr150r3100_2.launch copy.py  test_ros2_control_sim_ignition_kr150r3100_2.launch copy.py
kuka_kr150_support/urdf/: kr150_2.xacro  kr150_2_macro.xacro  kr150r3100_2.xacro  kr150r3100_2_macro.xacro
kuka_kr16_support/: CMakeLists.txt  package.xml
kuka_kr16_support/launch/: bringup.launch.py  bringup_control_node.launch.py  bringup_joint_state_broadcaster_spawner.launch.py  bringup_joint_trajectory_controller.launch.py  bringup_joint_trajectory_controller_rviz2.launch.py  bringup_robot_state_publisher.launch.py  kuka_kr16_2.launch.py  test_gazebo_sim_kuka_kr16_2.launch.py  test_kr16_2.launch.py  test_kuka_kr16_2_forward_position_controller.launch.py  view_kr16_2.launch.py  (+3 more)
kuka_kr3_support/: CMakeLists.txt
kuka_kr5_support/: CMakeLists.txt  package.xml
kuka_kr5_support/config/: opw_kinematics_kr5.yaml
kuka_kr5_support/launch/: load_kr5_arc.launch.py  test_gazebo_classic_kuka_kr5_arc.launch.py  test_gazebo_sim_kuka_kr5_arc.launch.py  test_kr5_arc.launch.py  test_ros2_control_kr5_arc.launch.py
kuka_kr5_support/test/: ros_launch_test.py
kuka_kr5_support/urdf/: kr5_arc.xacro  kr5_arc_macro.xacro
kuka_resources/: CMakeLists.txt  package.xml
kuka_ros2_control_sim_support/: CMakeLists.txt  package.xml
kuka_ros2_control_support/: CMakeLists.txt  package.xml
kuka_ros2_control_support/config/: 6dof_joint_trajectory_controller_goals.yaml  kuka_6dof_joint_trajectory_controller_goals.yaml
kuka_ros2_control_support/launch/: bringup.launch.py  test_bringup.launch.py  test_joint_trajectory_controller.launch.py  test_ros2_control_kuka.launch.py
kuka_ros2_control_support/src/: ros2_control_node.cpp  ros2_control_node_fixed_period.cpp  ros2_control_node_fixed_period_sc.cpp  ros2_control_node_max_update_rate.cpp  ros2_control_node_max_update_rate_sc.cpp  ros2_control_node_steady_clock.cpp
kuka_ros2_control_support/test/: ros2_control_support.py
kuka_ros2_control_support/urdf/: common_kuka.xacro  common_macro.ros2_control.xacro
kuka_rsi_hw_interface/: CMakeLists.txt  kuka_rsi_hw_interface.xml  package.xml  ros2_control_kuka_driver.xml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  kuka_hardware_interface.hpp  kuka_system_position_only.hpp  robot_control_interface.hpp  rsi_command.hpp  rsi_state.hpp  udp_server.hpp  visibility_control.hpp
kuka_rsi_hw_interface/krl/KR_C4/: README.md
kuka_rsi_hw_interface/krl/KR_C4/KR_C4_8.6.x/: RSIContext.rsix  RSI_Ethernet.src  RSI_EthernetConfig.xml
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp  kuka_system_position_only.cpp  robot_control_interface.cpp
kuka_rsi_simulator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
kuka_rsi_simulator/kuka_rsi_simulator/: kuka_rsi_simulator.py
(+100 files in other folders)
